Fix footer overlap

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -77,7 +77,7 @@
 // Footer
 //
 .Footer
-	background: white
+
 	bottom: 0;
 	cursor: pointer
 	height: 40px
@@ -87,6 +87,9 @@
 	text-align: center;
 	width: 100%;
 	z-index: 3
+
+.Footer-inner
+	background: white
 
 .Footer-arrow
 	text-decoration: none
